# llm-honeypot-intelligence

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
dashboards/: c2-dashboard.ndjson  cve-dashboard.ndjson  llm-honeypot-intelligence.ndjson  setup-attack-class.sh
docs/: architecture.md  mitre-attack-mapping.md  results.md  setup-guide.md
proxy/: .env.example  Dockerfile  config.yaml.example  docker-compose.yml  requirements.txt  run_c2_detector.py  run_heuristic_detector.py  run_rule_generator.py  run_scorer.py
proxy/src/: cache.py  cve_engine.py  cve_templates.py  embeddings.py  heuristic_detector.py  main.py  models.py  rl_scorer.py  rule_generator.py
rules/: latest_summary.json  manifest.json
rules/firewall/: blocklist-peak-run1_iptables.sh  blocklist-peak-run1_nftables.nft  blocklist-peak-run1_plain.txt  blocklist_iptables.sh  blocklist_nftables.nft  blocklist_plain_blocklist.txt
rules/iocs/: ioc-peak-run1.json  ioc_list.json
rules/latest/: manifest.json
rules/sigma/: honeypot_http_configuration_credential_theft.yml  honeypot_http_malware_download.yml  honeypot_http_proxy_abuse_ssrf.yml  honeypot_http_remote_code_execution_attempt.yml  honeypot_http_vulnerability_scanning.yml  honeypot_ssh_command_execution.yml  honeypot_ssh_data_collection_exfiltration.yml  (+4 more)
scripts/: sync-to-github.sh
threat-intel/: alert-watchlist.json  alerts.json  campaigns.json  dynamic-blocklist.txt  ip-reputation.json  threat-report.md  threat-summary.json
(+238 files in other folders)
