[project]
name = "llm-honeypot-intelligence"
version = "0.1.0"
description = "LLM-powered honeypot intelligence platform (T-Pot extensions)"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["proxy"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "I001",   # isort
]
